--- a/views/allUsers.handlebars
+++ b/views/allUsers.handlebars
@@ -1,13 +1,5 @@
+<h1>times you have been here <b> {{visitCount}} </b> </h1>
+
 <h1>my name is eric {{favoriteFood}} </h1>
 
-
-<ul>
-    {{#each users as |user|}}
-    <li>
-        <p>user id : {{user.id}} </p>
-        <p>username : {{user.username}} </p>
-        <p>user email : {{user.email}} </p>
-    </li>
-
-    {{/each}}
-</ul>
+{{> userList}}
